Update the time

--- a/src/style.css
+++ b/src/style.css
@@ -133,6 +133,11 @@ a {
   font-size: 16px;
   line-height: 20px;
   list-style: none;
+}
+li :first-letter {
+  text-transform: capitalize;
+}
+.description {
   text-transform: capitalize;
 }
 .Weather li strong {
