--- a/src/style.css
+++ b/src/style.css
@@ -172,7 +172,7 @@ li :first-letter {
 }
 .WeatherForecast {
   text-align: center;
-  margin: 40px 0;
+  margin-top: 20px;
   border-bottom: 1px solid #f9f7fe;
   padding-bottom: 50px;
 }
