--- a/src/style.css
+++ b/src/style.css
@@ -66,6 +66,14 @@ body {
   box-shadow: 0 30px 50px rgb(65 50 100 / 8%);
   padding: 40px;
   color: #878787;
+  background: radial-gradient(
+    328px at 2.9% 15%,
+    rgb(191, 224, 251) 0%,
+    rgb(232, 233, 251) 25.8%,
+    rgb(252, 239, 250) 50.8%,
+    rgb(234, 251, 251) 77.6%,
+    rgb(240, 251, 244) 100.7%
+  );
 }
 a {
   color: #007bff;
